Remove Visual Studio Code config from version control.

--- a/.gitignore
+++ b/.gitignore
@@ -249,3 +249,4 @@ TSWLatexianTemp*
 # expex forward references with \gathertags
 *-tags.tex
 Magnet Fit/Magnetc Efficiency/nb-guilherme/nemplot/
+.vscode/
